# sudoku-gui

./: .clang-format  .clang-tidy  .gitignore  .pylintrc  CMakeLists.txt  LICENSE.md  README.md  cell_state.h  gui.py  hint_highlight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sudoku-gui-qtcreator.pro  sudoku_cell_widget.cpp  sudoku_cell_widget.h  sudoku_cell_widget.py  sudoku_cell_widget_plugin.py  sudoku_grid_widget.cpp  sudoku_grid_widget.h  sudoku_helper.h
src/: cell_state.h  hint_highlight.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quadratic_qframe.h  sudoku_cell_widget.cpp  sudoku_cell_widget.h  sudoku_grid_widget.cpp  sudoku_grid_widget.h  sudoku_helper.h
